5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1590_2895.log
== TEST (2019-03-20 15:26:02) 
-- CODE:
a = float(input("Qual a quantidade de jogos? "))
b = float(input("Qual o valor unitario de cada jogo? "))
c = float(input("Qual o valor do frete? "))

preco total = a * b + c

print(preco total)
-- ERROR:
File "XXXX", line 5
    preco total = a * b + c
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:26:31) 
-- CODE:
a = float(input("Qual a quantidade de jogos? "))
b = float(input("Qual o valor unitario de cada jogo? "))
c = float(input("Qual o valor do frete? "))

preco_total = a * b + c

print(preco_total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:26:33) 
-- CODE:
a = float(input("Qual a quantidade de jogos? "))
b = float(input("Qual o valor unitario de cada jogo? "))
c = float(input("Qual o valor do frete? "))

preco_total = a * b + c

print(preco_total)
-- EXECUTION TIME:
0.12342
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
